# Thermo-Speculative-Decoding

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DESIGN_TSD.md  DEV_NOTES.md  README_m0.md  README_m1.md
scripts/: make_m0_artifact.py  run_m0.py  run_m1.py  sweep_m0.py  sweep_m1.py  sweep_m1_grid.py
src/tsd/: __init__.py  psi.py  tsu_iface.py
src/tsd/proposer/: __init__.py  head.py  state.py
src/tsd/targets/: __init__.py  m0_categorical.py  m1_bigram.py
src/tsd/telemetry/: __init__.py  logging.py  metrics.py
src/tsd/train/: __init__.py  acceptance_ft.py  distill_ce.py
src/tsd/verifier/: __init__.py  accept_correct.py  lookahead.py
tests/: conftest.py  test_accept_correct.py  test_accept_correct_unbiased.py  test_golden_psi_contract.py  test_m0_cli_smoke.py  test_m0_end_to_end.py  test_m0_target_and_psi.py  test_m0_throughput.py  test_m1_acceptance.py  test_m1_bigram_targets.py  test_m1_cli_smoke.py  test_m1_psi_from_row.py  test_m1_telemetry_consistency.py  test_m1_unbiased_fixed_context.py  test_m1_unbiased_synthetic.py  test_psi_semantics.py  test_tsu_simulator.py
